fix jwt filter